--- a/.github/workflows/quality.yaml
+++ b/.github/workflows/quality.yaml
@@ -26,11 +26,14 @@ jobs:
       - name: Formatting (rustfmt)
         run: cargo fmt -- --check
 
-      - name: Clippy (all features)
-        run: cargo clippy --all --all-targets --all-features --tests -- -D warnings
+      - name: Clippy (default features)
+        run: cargo clippy --all --all-targets --tests -- -D warnings
       
       - name: Clippy (acpi,kvm)
         run: cargo clippy --all --all-targets --no-default-features --tests --features "acpi,kvm" -- -D warnings
       
       - name: Clippy (kvm)
         run: cargo clippy --all --all-targets --no-default-features --tests --features "kvm" -- -D warnings
+
+      - name: Clippy (mshv)
+        run: cargo clippy --all --all-targets --no-default-features --tests --features "mshv" -- -D warnings
